Fix missing links for 2023 CRAN articles

--- a/_news/RJ-2023-1-cran/RJ-2023-1-cran.Rmd
+++ b/_news/RJ-2023-1-cran/RJ-2023-1-cran.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Changes on CRAN
-subtitle: 2023-02-01 to 2023-04-30
+abstract: Updates from CRAN for 2023-02-01 to 2023-04-30
 date: '2023-03-01'
 draft: no
 author:
