--- a/_news/RJ-2023-4-cran/RJ-2023-4-cran.Rmd
+++ b/_news/RJ-2023-4-cran/RJ-2023-4-cran.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Changes on CRAN
-subtitle: 2023-10-01 to 2023-12-31
+abstract: Updates from CRAN for 2023-10-01 to 2023-12-31
 date: '2023-12-01'
 draft: no
 author:
