--- a/_news/RJ-2023-3-cran/RJ-2023-3-cran.Rmd
+++ b/_news/RJ-2023-3-cran/RJ-2023-3-cran.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Changes on CRAN
-subtitle: 2023-05-01 to 2023-09-30
+abstract: Updates from CRAN for 2023-05-01 to 2023-09-30
 date: '2023-11-26'
 author:
 - name: Kurt Hornik
