Fix metadata for RJ-2024-1-cran

--- a/_news/RJ-2024-1-cran/RJ-2024-1-cran.Rmd
+++ b/_news/RJ-2024-1-cran/RJ-2024-1-cran.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Changes on CRAN
-subtitle: 2024-01-01 to 2024-06-30
+abstract: Updates from CRAN for 2024-01-01 to 2024-06-30
 date: '2024-03-01'
 draft: no
 author:
