--- a/news/RJ-2023-1-cran/RJ-2023-1-cran.tex
+++ b/news/RJ-2023-1-cran/RJ-2023-1-cran.tex
@@ -1,14 +1,14 @@
 % !TeX root = RJwrapper.tex
 \title{Changes on CRAN}
 
-\subtitle{%
-2023-02-01 to 2023-04-30
-}
 
 \author{by Kurt Hornik, Uwe Ligges, and Achim Zeileis}
 
 \maketitle
 
+\abstract{%
+Updates from CRAN for 2023-02-01 to 2023-04-30
+}
 
 In the past 3 months, 516 new packages were
 added to the CRAN package repository. 206
@@ -16,12 +16,11 @@ packages were unarchived, 416 were archived and
 4 had to be removed. The following shows the
 growth of the number of active packages in the CRAN package repository:
 
-\begin{center}\includegraphics[width=1\linewidth]{RJ-2023-1-cran_files/figure-latex/cran_growth-1} \end{center}
+\begin{center}\includegraphics[width=1\linewidth,alt={CRAN growth: Number of CRAN packages over time in levels (left) and in logs (right).}]{RJ-2023-1-cran_files/figure-latex/cran_growth-1} \end{center}
 
 \noindent On 2023-04-30, the number of active packages was around~19439.
 
-\hypertarget{cran-package-submissions}{%
-\subsection{CRAN package submissions}\label{cran-package-submissions}}
+\subsection{CRAN package submissions}\label{cran-package-submissions}
 
 From February 2023 to April 2023
 CRAN received 7905~package submissions.
@@ -85,8 +84,7 @@ manual & 1788 (23.2\%) & 1808 (23.5\%) \\
 \noindent where we only count those as \emph{auto} processed whose publication or
 rejection happened automatically in all steps.
 
-\hypertarget{cran-mirror-security}{%
-\subsection{CRAN mirror security}\label{cran-mirror-security}}
+\subsection{CRAN mirror security}\label{cran-mirror-security}
 
 Currently, there are 100 official CRAN mirrors,
 80~of which provide both
@@ -94,8 +92,7 @@ secure downloads via `\texttt{https}' \emph{and} use secure mirroring from the C
 (via rsync through ssh tunnels). Since the~R 3.4.0 release, \texttt{chooseCRANmirror()}
 offers these mirrors in preference to the others which are not fully secured (yet).
 
-\hypertarget{cran-task-view-initiative}{%
-\subsection{CRAN Task View Initiative}\label{cran-task-view-initiative}}
+\subsection{CRAN Task View Initiative}\label{cran-task-view-initiative}
 
 There is one new task view:
 
