--- a/news/RJ-2023-3-cran/RJ-2023-3-cran.tex
+++ b/news/RJ-2023-3-cran/RJ-2023-3-cran.tex
@@ -1,16 +1,17 @@
 % !TeX root = RJwrapper.tex
 \title{Changes on CRAN}
 
+\subtitle{%
+2023-05-01 to 2023-09-30
+}
 
 \author{by Kurt Hornik, Uwe Ligges, and Achim Zeileis}
 
 \maketitle
 
-\abstract{%
-Updates from CRAN for 2023-05-01 to 2023-09-30
-}
 
-\section{CRAN growth}\label{cran-growth}
+\hypertarget{cran-growth}{%
+\section{CRAN growth}\label{cran-growth}}
 
 In the past 5 months, 866~new packages were
 added to the CRAN package repository. 332~packages
@@ -18,16 +19,18 @@ were unarchived, 701~were archived and
 5~had to be removed. The following shows the
 growth of the number of active packages in the CRAN package repository:
 
-\begin{center}\includegraphics[width=1\linewidth,alt={CRAN growth: Number of CRAN packages over time in levels (left) and in logs (right).}]{RJ-2023-3-cran_files/figure-latex/cran_growth-1} \end{center}
+\begin{center}\includegraphics[width=1\linewidth]{RJ-2023-3-cran_files/figure-latex/cran_growth-1} \end{center}
 
 \noindent On 2023-09-30, the number of active packages was around~19932.
 
-\section{Changes in the CRAN Repository Policy}\label{changes-in-the-cran-repository-policy}
+\hypertarget{changes-in-the-cran-repository-policy}{%
+\section{Changes in the CRAN Repository Policy}\label{changes-in-the-cran-repository-policy}}
 
 The \href{https://CRAN.R-project.org/web/packages/policies.html}{Policy} now links to an
 accompanying document on \href{https://CRAN.R-project.org/web/packages/using_rust.html}{Using Rust in CRAN packages}.
 
-\section{CRAN package submissions}\label{cran-package-submissions}
+\hypertarget{cran-package-submissions}{%
+\section{CRAN package submissions}\label{cran-package-submissions}}
 
 From May 2023 to September 2023
 CRAN received 12237~package submissions.
@@ -91,7 +94,8 @@ manual & 2337 (19.4\%) & 2883 (23.9\%) \\
 \noindent where we only count those as \emph{auto} processed whose publication or
 rejection happened automatically in all steps.
 
-\section{CRAN mirror security}\label{cran-mirror-security}
+\hypertarget{cran-mirror-security}{%
+\section{CRAN mirror security}\label{cran-mirror-security}}
 
 Currently, there are 94 official CRAN mirrors,
 76~of which provide both
@@ -99,7 +103,8 @@ secure downloads via `\texttt{https}' \emph{and} use secure mirroring from the C
 (via rsync through ssh tunnels). Since the~R 3.4.0 release, \texttt{chooseCRANmirror()}
 offers these mirrors in preference to the others which are not fully secured (yet).
 
-\section{CRAN Task View Initiative}\label{cran-task-view-initiative}
+\hypertarget{cran-task-view-initiative}{%
+\section{CRAN Task View Initiative}\label{cran-task-view-initiative}}
 
 There is one new task view:
 
