Added Mitch as TE

--- a/index.Rmd
+++ b/index.Rmd
@@ -48,13 +48,13 @@ p > span.doi, td > span.doi {
   min-width: 120px;
 }
 .update {
-  background-color: hsla(24, 100%, 50%, 0.05); 
-  border-left: 3px solid hsl(24, 100%, 50%); 
+  background-color: hsla(24, 100%, 50%, 0.05);
+  border-left: 3px solid hsl(24, 100%, 50%);
   padding-left: 1em;
 }
 ```
 
-The R Journal is the peer-reviewed, open-access scientific journal, published by The R Foundation. It features short to medium length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R. 
+The R Journal is the peer-reviewed, open-access scientific journal, published by The R Foundation. It features short to medium length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R.
 
 The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing [SJR impact factor](https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no). Papers are expected to be concise, clearly written, not too technical, clearly related to R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
 
@@ -103,7 +103,7 @@ knitr::include_graphics(c("resources/time_to_accept_plot.png",
 ```
 
 For published articles in the years `r years`, the boxplots show time from submission to accept by year of publication. Median number of days to accept is under a year. The barchart on the right refers to articles submitted in the years `r years`, and reports the status as
-rejected, in progress or accepted/published. Papers labelled 'in progress' are under review or awaiting revisions. 
+rejected, in progress or accepted/published. Papers labelled 'in progress' are under review or awaiting revisions.
 
 
 
@@ -132,7 +132,7 @@ Rob Hyndman, Monash University, Australia r-journal@r-project.org
 - Katarina Domijan, Maynooth University, Ireland
 - Isabella Gollini, University College Dublin, Ireland
 - Michael Kane, Yale University, USA
-- Adam Loy, Carleton College, USA 
+- Adam Loy, Carleton College, USA
 - Nicholas Tierney, Telethon Kids, Australia
 - Susan Vanderplas, University of Nebraska, Lincoln, USA
 - Lucy D'Agostino McGowan, Wake Forest University, USA
@@ -147,7 +147,9 @@ Rob Hyndman, Monash University, Australia r-journal@r-project.org
 - Ivan Svetunkov, Lancaster University, UK
 - Wenjie Wang, Eli Lilly and Company, USA
 
+### Technical editor
 
+- Mitchell O'Hara-Wild, Nectric, Australia
 
 ### Editorial advisory board
 
@@ -182,6 +184,3 @@ Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024)
 - Mark van der Loo (2021-2022)
 - Emi Tanaka (2022-2023)
 - Emily Zabor (2020-2024)
-
-
-
