Added editor urls

--- a/index.Rmd
+++ b/index.Rmd
@@ -111,45 +111,45 @@ rejected, in progress or accepted/published. Papers labelled 'in progress' are u
 
 ### Editor-in-Chief
 
-Rob Hyndman, Monash University, Australia r-journal@r-project.org
+[Rob Hyndman](https://robjhyndman.com), Monash University, Australia r-journal@r-project.org
 
 ### Executive editors
 
-- Emily Zabor, Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.
-- Mark van der Loo, Statistics Netherlands and University of Leiden, The Netherlands
-- Emi Tanaka, Australian National University, Australia
+- [Emily Zabor](https://www.emilyzabor.com), Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.
+- [Mark van der Loo](https://www.markvanderloo.eu), Statistics Netherlands and University of Leiden, The Netherlands
+- [Emi Tanaka](https://emitanaka.org), Australian National University, Australia
 
 ### Associate editors
 
-- Rafael de Andrade Moral, Maynooth University, Ireland
-- Vincent Arel-Bundock, University of Montreal, Canada
-- Rasmus Bååth, Lund University, Sweden
-- Przemek Biecek, University of Warsaw, Poland
-- Chris Brunsdon, Maynooth University, Ireland
-- Kevin Burke, University of Limerick, Ireland
-- Mine Çetinkaya-Rundel, Duke University, USA
-- Xiaoyue Cheng, University of Nebraska, Omaha, USA
-- Katarina Domijan, Maynooth University, Ireland
-- Isabella Gollini, University College Dublin, Ireland
-- Michael Kane, Yale University, USA
-- Adam Loy, Carleton College, USA
-- Nicholas Tierney, Telethon Kids, Australia
-- Susan Vanderplas, University of Nebraska, Lincoln, USA
-- Lucy D'Agostino McGowan, Wake Forest University, USA
-- Yanfei Kang, Beihang University, China
-- Ursula Laa, BOKU Vienna, Austria
-- Matthias Templ, University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
-- Jouni Helske, University of Turku, Finland
-- Christoph Sax, Cynkra, Switzerland
-- Thomas Fung, Macquarie University, Australia
-- Thiyanga Talagala, University of Sri Jayewardenepura, Sri Lanka
-- Xiaoqian Wang, Monash University, Australia
-- Ivan Svetunkov, Lancaster University, UK
-- Wenjie Wang, Eli Lilly and Company, USA
+- [Rafael de Andrade Moral](https://rafamoral.github.io), Maynooth University, Ireland
+- [Vincent Arel-Bundock](https://arelbundock.com), University of Montreal, Canada
+- [Rasmus Bååth](https://www.sumsar.net), Lund University, Sweden
+- [Przemek Biecek](https://pbiecek.github.io), University of Warsaw, Poland
+- [Chris Brunsdon](https://www.maynoothuniversity.ie/faculty-social-sciences/our-people/chris-brunsdon), Maynooth University, Ireland
+- [Kevin Burke](https://kevinburke.ie), University of Limerick, Ireland
+- [Mine Çetinkaya-Rundel](https://mine-cr.com), Duke University, USA
+- [Xiaoyue Cheng](https://chxy.github.io), University of Nebraska, Omaha, USA
+- [Katarina Domijan](https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/katarina-domijan), Maynooth University, Ireland
+- [Isabella Gollini](https://igollini.github.io), University College Dublin, Ireland
+- [Michael Kane](https://campuspress.yale.edu/fdstest/michael-j-kane/), Yale University, USA
+- [Adam Loy](https://aloy.rbind.io), Carleton College, USA
+- [Nicholas Tierney](https://www.njtierney.com), Telethon Kids, Australia
+- [Susan Vanderplas](https://srvanderplas.github.io), University of Nebraska, Lincoln, USA
+- [Lucy D'Agostino McGowan](https://www.lucymcgowan.com), Wake Forest University, USA
+- [Yanfei Kang](https://yanfei.site), Beihang University, China
+- [Ursula Laa](https://uschilaa.github.io), BOKU Vienna, Austria
+- [Matthias Templ](https://www.fhnw.ch/de/personen/matthias-templ), University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
+- [Jouni Helske](https://jounihelske.netlify.app), University of Turku, Finland
+- [Christoph Sax](https://github.com/christophsax), Cynkra, Switzerland
+- [Thomas Fung](https://github.com/thomas-fung), Macquarie University, Australia
+- [Thiyanga Talagala](https://thiyanga.netlify.app), University of Sri Jayewardenepura, Sri Lanka
+- [Xiaoqian Wang](https://xqnwang.rbind.io), Monash University, Australia
+- [Ivan Svetunkov](https://github.com/config-i1/), Lancaster University, UK
+- [Wenjie Wang](https://wwenjie.org), Eli Lilly and Company, USA
 
 ### Technical editor
 
-- Mitchell O'Hara-Wild, Nectric, Australia
+- [Mitchell O'Hara-Wild](https://mitchelloharawild.com), Nectric, Australia
 
 ### Editorial advisory board
 
