--- a/_news/RJ-2024-2-rfoundation/RJ-2024-2-rfoundation.Rmd
+++ b/_news/RJ-2024-2-rfoundation/RJ-2024-2-rfoundation.Rmd
@@ -9,9 +9,12 @@ author:
   email: Torsten.Hothorn@R-project.org
   orcid: 0000-0001-8301-0471
 output:
+  rjtools::rjournal_pdf_article:
+    latex_engine: xelatex
   rjtools::rjournal_web_article:
     self_contained: yes
     toc: no
+header-includes: \usepackage{ctex}
 volume: 16
 issue: 2
 slug: RJ-2024-2-rfoundation
@@ -24,7 +27,7 @@ slug: RJ-2024-2-rfoundation
 Membership fees and donations received between 
 2024-12-06 and 2025-01-29.
 
-#Donations
+## Donations
 
 
 James Curran (New Zealand)
@@ -34,16 +37,15 @@ The University of Auckland, Statistics Department (New Zealand)
 Fergus Reig Gracia (Spain)
 Thomas Stadler (Switzerland)
 
-#Supporting benefactors
+## Supporting benefactors
 
  b-data GmbH, Winterthur (Switzerland)
-#Supporting institutions
 
+## Supporting institutions
 
 oikostat GmbH, Ettiswil (Switzerland)
 
-#Supporting members
-
+## Supporting members
 
 Richard Abdill (United States)
 Gilberto Camara (Brazil)
