--- a/index.Rmd
+++ b/index.Rmd
@@ -146,6 +146,7 @@ rejected, in progress or accepted/published. Papers labelled 'in progress' are u
 - [Xiaoqian Wang](https://xqnwang.rbind.io), Monash University, Australia
 - [Ivan Svetunkov](https://github.com/config-i1/), Lancaster University, UK
 - [Wenjie Wang](https://wwenjie.org), Eli Lilly and Company, USA
+- [Robin Lovelace](https://www.robinlovelace.net), University of Leeds, UK
 
 ### Technical editor
 
