Updated list of AEs and sorted alphabetically

--- a/index.Rmd
+++ b/index.Rmd
@@ -122,31 +122,34 @@ rejected, in progress or accepted/published. Papers labelled 'in progress' are u
 ### Associate editors
 
 - [Rafael de Andrade Moral](https://rafamoral.github.io), Maynooth University, Ireland
+- [David Ardia](https://ardiad.github.io), HEC Montréal, Canada
 - [Vincent Arel-Bundock](https://arelbundock.com), University of Montreal, Canada
 - [Rasmus Bååth](https://www.sumsar.net), Lund University, Sweden
 - [Przemek Biecek](https://pbiecek.github.io), University of Warsaw, Poland
-- [Chris Brunsdon](https://www.maynoothuniversity.ie/faculty-social-sciences/our-people/chris-brunsdon), Maynooth University, Ireland
 - [Kevin Burke](https://kevinburke.ie), University of Limerick, Ireland
 - [Mine Çetinkaya-Rundel](https://mine-cr.com), Duke University, USA
-- [Xiaoyue Cheng](https://chxy.github.io), University of Nebraska, Omaha, USA
-- [Katarina Domijan](https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/katarina-domijan), Maynooth University, Ireland
-- [Isabella Gollini](https://igollini.github.io), University College Dublin, Ireland
-- [Michael Kane](https://campuspress.yale.edu/fdstest/michael-j-kane/), Yale University, USA
-- [Adam Loy](https://aloy.rbind.io), Carleton College, USA
-- [Nicholas Tierney](https://www.njtierney.com), Telethon Kids, Australia
-- [Susan Vanderplas](https://srvanderplas.github.io), University of Nebraska, Lincoln, USA
+- [Xiaoyue Cheng](https://chxy.github.io), University of Nebraska, USA
 - [Lucy D'Agostino McGowan](https://www.lucymcgowan.com), Wake Forest University, USA
-- [Yanfei Kang](https://yanfei.site), Beihang University, China
-- [Ursula Laa](https://uschilaa.github.io), BOKU Vienna, Austria
-- [Matthias Templ](https://www.fhnw.ch/de/personen/matthias-templ), University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
-- [Jouni Helske](https://jounihelske.netlify.app), University of Turku, Finland
-- [Christoph Sax](https://github.com/christophsax), Cynkra, Switzerland
+- [Katarina Domijan](https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/katarina-domijan), Maynooth University, Ireland
 - [Thomas Fung](https://github.com/thomas-fung), Macquarie University, Australia
-- [Thiyanga Talagala](https://thiyanga.netlify.app), University of Sri Jayewardenepura, Sri Lanka
-- [Xiaoqian Wang](https://xqnwang.rbind.io), Monash University, Australia
-- [Ivan Svetunkov](https://github.com/config-i1/), Lancaster University, UK
-- [Wenjie Wang](https://wwenjie.org), Eli Lilly and Company, USA
+- [Isabella Gollini](https://igollini.github.io), University College Dublin, Ireland
+- [Jouni Helske](https://jounihelske.netlify.app), University of Turku, Finland
+- [Michael Kane](https://campuspress.yale.edu/fdstest/michael-j-kane/), Yale University, USA
+- [Yanfei Kang](https://yanfei.site), Beihang University, China
+- [Alexander Kowarik](https://www.linkedin.com/in/alexander-kowarik-37004ab/), Statistics Austria, Austria
+- [Ursula Laa](https://uschilaa.github.io), BOKU Vienna, Austria
 - [Robin Lovelace](https://www.robinlovelace.net), University of Leeds, UK
+- [Adam Loy](https://aloy.rbind.io), Carleton College, USA
+- [Thomas Nagler](https://tnagler.github.io), LMU Munich, Germany
+- [Christoph Sax](https://github.com/christophsax), Cynkra, Switzerland
+- [Thiyanga Talagala](https://thiyanga.netlify.app), University of Sri Jayewardenepura, Sri Lanka
+- [Matthias Templ](https://www.fhnw.ch/de/personen/matthias-templ), University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
+- [Valentin Todorov](https://www.linkedin.com/in/valentin-todorov-07958a1b/), UNIDO, Austria
+- [Susan Vanderplas](https://srvanderplas.github.io), University of Nebraska, USA
+- [Xiaoqian Wang](https://xqnwang.rbind.io), Monash University, Australia
+- [Wenjie Wang](https://wwenjie.org), Eli Lilly and Company, USA
+- [Tomasz Woźniak](https://fbe.unimelb.edu.au/our-people/staff/economics/tomasz-wozniak), University of Melbourne, Australia
+- [Julia Wrobel](http://juliawrobel.com), Emory University, USA
 
 ### Technical editor
 
@@ -185,3 +188,8 @@ Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024)
 - Mark van der Loo (2021-2022)
 - Emi Tanaka (2022-2023)
 - Emily Zabor (2020-2024)
+- Nicholas Tierney (2021-2024)
+- Chris Brunsdon (2022-2024)
+- Romain Lesur (2024)
+- Ivan Svetunkov (2024)
+ 
