Updated front page with new data

--- a/index.Rmd
+++ b/index.Rmd
@@ -80,11 +80,10 @@ The R Journal was established in 2009, superseding the [R News](http://www.r-pro
 
 ## R Journal article summaries, for the last four years
 
-The R Journal receives a large number of submissions, currently over 200 a year, and processing times and especially review times are highly variable. The summaries below shows that for published articles, the time from first submission to accept averages at under a year.
-Just a very small number of 2021 submissions await a final decision, and even for 2022 submissions, the majority of  articles have received an accept/reject decision.
+The R Journal receives a large number of submissions, currently around 150 a year, and processing times and especially review times are highly variable. The summaries below shows that for published articles, the time from first submission to accept averages at under a year.
 
 ```{r, echo=FALSE, eval=FALSE}
-# To update plots below, run from the articles project. The code uses tablulate_articles, which runs only from articles.
+# To update plots below, run from the articles project. The code uses tabulate_articles, which runs only from articles.
 
 article_status_plot()
 time_to_accept_plot()
