--- a/index.Rmd
+++ b/index.Rmd
@@ -54,7 +54,7 @@ p > span.doi, td > span.doi {
 }
 ```
 
-The R Journal is the peer-reviewed, open-access scientific journal, published by The R Foundation. It features short to medium length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R.
+The R Journal is a peer-reviewed, open-access scientific journal, published by The R Foundation. It features short- to medium-length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R.
 
 The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing [SJR impact factor](https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no). Papers are expected to be concise, clearly written, not too technical, clearly related to R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
 
@@ -66,8 +66,6 @@ The R Journal reaches a wide audience and has a thorough review process. It has 
 
 The R Journal accepts a variety of article topics including:
 
-<!-- Following revision of the content description of The R Journal, from January 2017 submitted articles may include: -->
-
 - Packages: Details of contributed R packages that are available on CRAN or Bioconductor, that go beyond a package vignette. This includes providing the broader context, implementation details, applications or examples of use, with the purpose being to make the work relevant to a wider readership than only the package users. The paper might explain the novelty in implementation and use of R, introduce new data structures or general architectures that could be re-usable for other R projects. Note that both the paper and the code will be reviewed.
 - Reviews and proposals: surveying and discussing challenges and opportunities of potential importance for the broader R community, including proposals and proof-of-concept implementations.
 - Comparisons and benchmarking: of implementations in base-R and contributed packages with each other, and where relevant with implementations in other software systems.
@@ -76,7 +74,7 @@ The R Journal accepts a variety of article topics including:
 
 ## History
 
-The R Journal was established in 2009, superseding the [R News](http://www.r-project.org/doc/Rnews/index.html).  For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activities and conference reports.
+The R Journal was established in 2009, superseding the [R News](http://www.r-project.org/doc/Rnews/index.html).  For historical purposes it also includes a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activities and conference reports.
 
 ## R Journal article summaries, for the last four years
 
@@ -88,107 +86,20 @@ The R Journal receives a large number of submissions, currently around 150 a yea
 article_status_plot()
 time_to_accept_plot()
 ```
+
 ```{r, echo=FALSE}
 years <- rev(as.numeric(format(Sys.Date(), "%Y")) - (1:4))
 
 ```
 
-
 ```{r,  fig.height=3, out.width=c("44%","56%"), fig.show='hold', echo=FALSE,  , fig.subcap=c('','')}
-
 knitr::include_graphics(c("resources/time_to_accept_plot.png",
 "resources/article_status_plot.png"))
 # published articles here refers to all in the Proofs folder. Which will coincide with website when published.
 ```
 
-For published articles in the years `r years`, the boxplots show time from submission to accept by year of publication. Median number of days to accept is under a year. The barchart on the right refers to articles submitted in the years `r years`, and reports the status as
-rejected, in progress or accepted/published. Papers labelled 'in progress' are under review or awaiting revisions.
+For published articles in the years `r years`, the boxplots show time from submission to accept by year of publication. Median number of days to accept is under a year. The barchart on the right refers to articles submitted in the years `r years`, and reports the status as rejected, in progress or accepted/published. Papers labelled 'in progress' are under review or awaiting revisions.
 
 
 
-## Editorial board
 
-### Editor-in-Chief
-
-[Rob Hyndman](https://robjhyndman.com), Monash University, Australia r-journal@r-project.org
-
-### Executive editors
-
-- [Emily Zabor](https://www.emilyzabor.com), Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.
-- [Mark van der Loo](https://www.markvanderloo.eu), Statistics Netherlands and University of Leiden, The Netherlands
-- [Emi Tanaka](https://emitanaka.org), Australian National University, Australia
-
-### Associate editors
-
-- [Rafael de Andrade Moral](https://rafamoral.github.io), Maynooth University, Ireland
-- [David Ardia](https://ardiad.github.io), HEC Montréal, Canada
-- [Vincent Arel-Bundock](https://arelbundock.com), University of Montreal, Canada
-- [Rasmus Bååth](https://www.sumsar.net), Lund University, Sweden
-- [Przemek Biecek](https://pbiecek.github.io), University of Warsaw, Poland
-- [Kevin Burke](https://kevinburke.ie), University of Limerick, Ireland
-- [Mine Çetinkaya-Rundel](https://mine-cr.com), Duke University, USA
-- [Xiaoyue Cheng](https://chxy.github.io), University of Nebraska, USA
-- [Lucy D'Agostino McGowan](https://www.lucymcgowan.com), Wake Forest University, USA
-- [Katarina Domijan](https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/katarina-domijan), Maynooth University, Ireland
-- [Thomas Fung](https://github.com/thomas-fung), Macquarie University, Australia
-- [Isabella Gollini](https://igollini.github.io), University College Dublin, Ireland
-- [Jouni Helske](https://jounihelske.netlify.app), University of Turku, Finland
-- [Michael Kane](https://campuspress.yale.edu/fdstest/michael-j-kane/), Yale University, USA
-- [Yanfei Kang](https://yanfei.site), Beihang University, China
-- [Alexander Kowarik](https://www.linkedin.com/in/alexander-kowarik-37004ab/), Statistics Austria, Austria
-- [Ursula Laa](https://uschilaa.github.io), BOKU Vienna, Austria
-- [Robin Lovelace](https://www.robinlovelace.net), University of Leeds, UK
-- [Adam Loy](https://aloy.rbind.io), Carleton College, USA
-- [Thomas Nagler](https://tnagler.github.io), LMU Munich, Germany
-- [Christoph Sax](https://github.com/christophsax), Cynkra, Switzerland
-- [Thiyanga Talagala](https://thiyanga.netlify.app), University of Sri Jayewardenepura, Sri Lanka
-- [Matthias Templ](https://www.fhnw.ch/de/personen/matthias-templ), University of Applied Sciences and Arts Northwestern Switzerland, Switzerland
-- [Valentin Todorov](https://www.linkedin.com/in/valentin-todorov-07958a1b/), UNIDO, Austria
-- [Susan Vanderplas](https://srvanderplas.github.io), University of Nebraska, USA
-- [Xiaoqian Wang](https://xqnwang.rbind.io), Monash University, Australia
-- [Wenjie Wang](https://wwenjie.org), Eli Lilly and Company, USA
-- [Tomasz Woźniak](https://fbe.unimelb.edu.au/our-people/staff/economics/tomasz-wozniak), University of Melbourne, Australia
-- [Julia Wrobel](http://juliawrobel.com), Emory University, USA
-
-### Technical editor
-
-- [Mitchell O'Hara-Wild](https://mitchelloharawild.com), Nectric, Australia
-
-### Editorial advisory board
-
-- Henrik Bengtssen, University of California, San Francisco, USA
-- Gabriela de Quiroz, Chief Data Scientist, IBM, USA
-- Michael Kane, Yale University, USA
-- Rebecca Killick, Lancaster University, UK
-
-### Governance
-
-The R Journal is run under the auspices of [the R Foundation](https://www.r-project.org/foundation/), and editors of the Journal are appointed by the Foundation board.
-
-### Past Editors-in-Chief
-
-Vince Carey (2009), Peter Dalgaard (2010), Heather Turner (2011), Martyn
-Plummer (2012), Hadley Wickham (2013), Deepayan Sarkar (2014), Bettina Grün
-(2015), Michael Lawrence (2016), Roger Bivand (2017), John Verzani (2018),
-Norman Matloff (2019), Michael Kane (2020), Dianne Cook (2021), Catherine
-Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024)
-
-### Past Associate Editors
-
-- Romain Lesur, INSEE, France (2024)
-- Earo Wang (2020-2022)
-- Beth Atkinson (2020-2022)
-- Kieran Healy (2021-2022)
-- Elizabeth Sweeney (2021-2023)
-- Louis Aslett (2021-2023)
-- Przemek Biecek (2021-2023)
-- Priyanga Dilini Talagala (2021-2023)
-- Simone Blomberg (2021-2022)
-- Mark van der Loo (2021-2022)
-- Emi Tanaka (2022-2023)
-- Emily Zabor (2020-2024)
-- Nicholas Tierney (2021-2024)
-- Chris Brunsdon (2022-2024)
-- Romain Lesur (2024)
-- Ivan Svetunkov (2024)
- 
