--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -12,42 +12,42 @@ d-article > * {
 }
 ```
 
-Articles for the R Journal are short to medium length, no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere.  The submission needs to include:
+Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. The submission needs to include:
 
-- paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures, and the output files `.html`, `.pdf`. 
+- files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures, and the output files `.html`, `.pdf`.
 - files to reproduce the results presented in the paper, including R scripts, and data.
-- motivating letter that describes why your paper is suitable for the consideration by the R Journal.
+- a motivating letter that describes why your paper is suitable for consideration by the R Journal.
 - if needed, supplementary files that might include additional technical details or examples.
 
-<div class = "rj-blue"> Read the information below on the requirements for files and format and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision. </div>
+<div class = "rj-blue">Read the information below on the requirements for files and format and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision.</div>
 
-<p>
-We are also keen to welcome new reviewers for the R Journal. If you would like to volunteer to review articles, please complete this [form here](https://docs.google.com/forms/d/e/1FAIpQLSf8EmpF85ASWqPHXqV0vdQd-GHhNBaAZZEYf4qxO3gTl-eGyA/viewform). You should have at least completed an undergraduate degree, and be an active R user. 
+# Creating your article
 
-# Creating your article 
+We currently accept submissions in Rmarkdown or LaTeX. Rmarkdown using the [rjtools package](https://rjournal.github.io/rjtools/) is preferred.
 
-### Rmarkdown to output html and pdf
+### Rmarkdown using rjtools
 
-The [rjtools](https://rjournal.github.io/rjtools/) package has a template to create the files needed for a submission in the form required by the R Journal. 
+The [rjtools](https://rjournal.github.io/rjtools/) package has a template to create the files needed for a submission in the form required by the R Journal.
 
-It is strongly recommended that you use the `create_article()` function. Knitting the Rmd will generate both an HTML and PDF format of your paper. 
+Create your article using the `create_article()` function. Knitting the Rmd will generate both an HTML and PDF format of your paper.
 
-When writing your article you should aim to write without specific reference to HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to
-conditionally produce a particular output.
+As far as possible, do not use specific HTML and LaTeX codes within your Rmd file. If you do need to write code specific to the HTML or PDF output, you can use `knitr::is_html_output()` and `knitr::is_latex_output()` to conditionally produce a particular output.
 
-The web articles for the R Journal are based on the distill framework, which provides several styling and arrangement options for your article contents. The **distill R package documentation** (generally also applicable to articles 
-written for the R Journal) describes various article elements and Rmarkdown syntax:
-https://rstudio.github.io/distill/. 
+Creative uses of interactive content in HTML formatted articles is encouraged. This will require conditional evaluation of code chunks with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.
 
-We are especially looking for creative uses of interactive content in HTML formatted articles. This will require that you make different code chunks evaluated conditionally using `eval=knitr::is_html_output()` or `eval=knitr::is_latex_output()` with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples. Figures and tabes for the `html` format should have alt-text in the chunk specification, to further assist with accessibility.
+Figures and tables should have alt-text in chunk specifications, to assist with accessibility.
 
-### Converting from rticles:rjournal_article Rmarkdown
+### Rmarkdown using rticles
 
-If you currently use the `rticles::rjournal_article` output format for R Markdown, the change involves five steps: (1) change output formats to `rjtools::rjournal_web_article` to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to `\@ref()` and (4) add the `rjournal.csl` and `rjournal.css` template files to your folder, updating YAML to utilise them, and (5) set the reference to the `.bib` in the YAML.
+The `rticles::rjournal_article` output format has been deprecated in favour of `rjtools`. We therefore ask that you use `rjtools` instead of `rticles`.
 
-### Traditional latex format
+### LaTeX format
 
-Articles can also be written using the  traditional [latex template](https://journal.r-project.org/share/RJtemplate.zip).  Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper), in addition to the motivation letter. You should avoid using any other specialist latex style files. The `rjtools` check functions described below can also be applied to check your files prior to submission.
+Articles can also be written using the [LaTeX template](https://journal.r-project.org/share/RJtemplate.zip). Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper), in addition to the motivation letter. The `rjtools` check functions described below can also be applied to check your files prior to submission.
+
+LaTeX submissions must compile with pdflatex. Please use as few LaTeX packages as possible. The template already includes several commonly-used packages such as `amsmath`, `booktabs`, `tikz`,  etc.  Do not use your own styles, fonts, or syntax colouring.
+
+LaTeX submissions that do not follow these guidelines will be rejected without review.
 
 # Checking your article
 
@@ -69,7 +69,7 @@ The `rjtools` package has a number of functions which can help you check that yo
 
 ### New submission
 
-To submit a new article to the R Journal, you will need to complete. You will need to provide these details:
+To submit a new article to the R Journal, you will need to complete a form providing these details:
 
 - Your name.
 - An email address for the corresponding author. Try to ensure it is an address that will be available in the long term, through the review process and after the paper is published so that readers can contact you about your work if desired.
@@ -77,24 +77,25 @@ To submit a new article to the R Journal, you will need to complete. You will ne
 - Names of all authors.
 - Article title.
 - Article type.
-- Article keywords/tags. You should be prepared to select at least one or two from the list and you are free to add an additional words or phrases that accurately describe your paper.
+- Article keywords/tags. You should be prepared to select at least one or two from the list and you are free to add any additional words or phrases that accurately describe your paper.
 - **Zip** file containing:
-    - finished paper files `.pdf` and `.html`. 
-    - paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures. 
+    - finished paper files `.pdf` and `.html`.
+    - paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures.
     - file to reproduce the results, including R scripts, and data.
     - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
     - reproducibility (supplementary) files in order that results reported in your paper can be reproduced, plus any additional files that contain additional technical details for your work or extra examples.
-- **A list of the reproducibility and supplementary files**, exactly as they are placed in your paper directory, to be entered comma-delimited like `mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf`. This list is used to automatically build the `.zip` file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files you so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal. 
+    - a list of R packages needed to process the submission. This can be in the form of a file `_Rpackages.txt` with a list of packages, one per line.
+- **A list of the reproducibility and supplementary files**, exactly as they are placed in your paper directory, to be entered comma-delimited like `mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf`. This list is used to automatically build the `.zip` file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal.
 
 You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <r-journal@r-project.org>.
 
-Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.
+Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time. Papers that cannot be reproduced will not be considered.
 
 # What happens after you submit a paper
 
 Once you have submitted a paper, the editorial board will go through the following steps.
 
-1. Deceide if your submission is technically in the correct format. In particular: 
+1. Decide if your submission is technically in the correct format. In particular:
     - are all the requested files there and of the correct format?
     - does the reproducibility code run?
     - is all code used open source and available via CRAN or BioConductor?
@@ -103,39 +104,16 @@ Once you have submitted a paper, the editorial board will go through the followi
     - is the topic within scope?
     - is the paper properly organized?
     - is the writing style suitable for review?
-3. If the submission passes the second test, it will be sent out for review. This process might take several months.
-   You will receive one or more reviews, possibly with notes from one of the (associate) editors, and a _verdict_. There are four possible verdicts:
-    - **Accepted** Your paper will be published in the R Journal. You will are asked to upload a final version that will be proof-read and 
-      you will receive  a print proof before publication.
-    - **Minor revisions** The paper can be accepted conditional on a number of smaller revisions in the manuscript and/or the code. You are expected to fix
-      these issies within three months, and resubmit along with a letter where you describe, point-by-point, how the comments of the reviewers have been
-      addressed. The paper will not be reviewed again by peer reviewers, but the editor will check whether the points have been sufficiently addressed.
-    - **Major revisions** The manuscript and/or the code need severe updates before the manuscript can be accepted for publication. You are expected to 
-      fix the issies within three months, and resubmit along with a letter where you describe, point-by-point how the comments of the reviewers have been 
-      addressed. The paper will be send back to the reviewers for a second round of review, which may result in any verdict.
-    - **Reject** Your paper is found to be unsuited for publication in the R Journal. No resubmission is expected.
+3. If the submission passes the second test, it will be sent out for review. This process might take several months. You will receive one or more reviews, possibly with notes from one of the (associate) editors, and a _verdict_. There are four possible verdicts:
+    - **Accepted** Your paper will be published in the R Journal. You will be asked to upload a final version that will be proof-read and you will receive a print proof before publication.
+    - **Minor revisions** The paper can be accepted conditional on a number of smaller revisions in the manuscript and/or the code. You are expected to fix these issues within three months, and resubmit along with a letter where you describe, point-by-point, how the comments of the reviewers have been addressed. The paper will not be reviewed again by peer reviewers, but the editor will check whether the points have been sufficiently addressed.
+    - **Major revisions** The manuscript and/or the code need major updates before the manuscript can be reconsidered. You are expected to fix the issues within three months, and resubmit along with a letter where you describe, point-by-point how the comments of the reviewers have been addressed. The paper will be send back to the reviewers for a second round of review, which may result in any verdict.
+    - **Reject** Your paper is found to be unsuited for publication in the R Journal. No resubmission is allowed.
 
-
-
-Re-submission and revisions to accepted articles are received through the same
-site where new submissions are received (link below). When providing a
-re-submission or revision, you will need to **enter the identifier of the
-original submission** in the last field of the submission form. This also needs
-to be done if your paper has previously been rejected, and you have made
-appropriate corrections for it to be considered again.
+Re-submission and revisions to accepted articles are received through the same site where new submissions are received (link above). When providing a re-submission or revision, you will need to **enter the identifier of the original submission** in the last field of the submission form.
 
 ### Note on special issue articles
 
-A special issue article can be considered to be a refereed journal article and generally carries more weight than an unrefereed conference proceedings.
+Special issues may be created to cover topics of interest to the R community, or based on papers presented at an R conference.
 
-Conference committees will designate a "Conference Editor in Chief" (CEiC) who
-will be primarily responsible for putting the special issue together. For 
-this pilot to be successful, it is important that putting together the
-special issue does not significantly increase the workload of the regular
-editors or the administrative team that helps to build the issues. It
-will be the responsibility of the CEiC to identify associate editors if needed,
-assign reviewers, accept and reject papers, and assemble the special issue.
-It will also be the responsibility of the CEiC to make sure that the issue reflects the diversity of the community, and that the
-[R Consortium and R Community Code of Conduct](https://wiki.r-consortium.org/view/R_Consortium_and_the_R_Community_Code_of_Conduct) 
-is followed during the process. 
-
+Please contact the Editor-in-Chief at <r-journal@r-project.org> if you would like to propose a special issue.
