Add toc to editorial board

--- a/editors.Rmd
+++ b/editors.Rmd
@@ -1,16 +1,21 @@
 ---
 title: "Editorial board"
-description: |
-  Details of the R Journal editorial board and advisory board
+toc: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+```{css, echo = FALSE}
+d-article > * {
+    grid-column: page;
+}
+```
+
 ## Editor-in-Chief
 
-[Rob Hyndman](https://robjhyndman.com), Monash University, Australia r-journal@r-project.org
+[Rob Hyndman](https://robjhyndman.com), Monash University, Australia. r-journal@r-project.org
 
 ## Executive editors
 
