Simplify submissions page

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "How to submit your article"
+toc: true
 ---
 
 ```{r setup, include=FALSE}
@@ -12,14 +13,8 @@ d-article > * {
 }
 ```
 
-Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. The submission needs to include:
+Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere.
 
-- files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures, and the output files `.html`, `.pdf`.
-- files to reproduce the results presented in the paper, including R scripts, and data.
-- a motivating letter that describes why your paper is suitable for consideration by the R Journal.
-- if needed, supplementary files that might include additional technical details or examples.
-
-<div class = "rj-blue">Read the information below on the requirements for files and format and then **[CLICK HERE](https://forms.gle/ykj6QcoGQD5ctnA5A)** to submit an article, re-submission, or revision.</div>
 
 # Creating your article
 
@@ -39,7 +34,7 @@ Figures and tables should have alt-text in chunk specifications, to assist with 
 
 ### Rmarkdown using rticles
 
-The `rticles::rjournal_article` output format has been deprecated in favour of `rjtools`. We therefore ask that you use `rjtools` instead of `rticles`.
+The `rticles::rjournal_article` output format has been deprecated in favour of `rjtools`. Please use `rjtools` instead of `rticles`.
 
 ### LaTeX format
 
@@ -65,35 +60,30 @@ The `rjtools` package has a number of functions which can help you check that yo
     - `check_packages_available()` additionally referenced packaged are also available on CRA or Bioconductor
 - Each of these can also be run individually.
 
-# File format for submission
+# Submitting your article
 
-### New submission
+To submit an article to the R Journal, you will need to complete [this form](https://forms.gle/ykj6QcoGQD5ctnA5A).
 
-To submit a new article to the R Journal, you will need to complete a form providing these details:
+Your files will need to be uploaded in a zip file that should contain:
 
-- Your name.
-- An email address for the corresponding author. Try to ensure it is an address that will be available in the long term, through the review process and after the paper is published so that readers can contact you about your work if desired.
-- An alternate email address, in case email to the primary address doesn't respond to editors requests.
-- Names of all authors.
-- Article title.
-- Article type.
-- Article keywords/tags. You should be prepared to select at least one or two from the list and you are free to add any additional words or phrases that accurately describe your paper.
-- **Zip** file containing:
-    - finished paper files `.pdf` and `.html`.
-    - paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures.
-    - file to reproduce the results, including R scripts, and data.
-    - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
-    - reproducibility (supplementary) files in order that results reported in your paper can be reproduced, plus any additional files that contain additional technical details for your work or extra examples.
-    - a list of R packages needed to process the submission. This can be in the form of a file `_Rpackages.txt` with a list of packages, one per line.
-- **A list of the reproducibility and supplementary files**, exactly as they are placed in your paper directory, to be entered comma-delimited like `mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf`. This list is used to automatically build the `.zip` file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal.
+  - The article in `.pdf` format.
+  - Files to build the article. If we can't build the article from the source files (e.g., `.Rmd`, `.tex`, `.bib`, `.sty` and figure files), it will be sent back to you.
+  - Files to reproduce the results, including R scripts, and data. If we can't reproduce the results, it will be sent back to you.
+  - A motivating letter that describes why your paper is suitable for consideration by the R Journal.
+  - Other supplementary files that contain additional technical details or examples.
+  - A list of R packages needed to reproduce the submission. This can be in the form of a file `_Rpackages.txt` with a list of packages, one per line.
 
-You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <r-journal@r-project.org>.
+You may have problems submitting if the size of your submission zip file is more than 10Mb. If you have large data files, you can make them available on an alternative site and provide the links in the paper.
 
-Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time. Papers that cannot be reproduced will not be considered.
+Please ensure that the submission can be reproduced in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.
 
-# What happens after you submit a paper
+If you have problems, please contact the Editor-in-Chief at <r-journal@r-project.org>.
 
-Once you have submitted a paper, the editorial board will go through the following steps.
+Re-submissions and revisions to articles should be submitted in the same way. When providing a re-submission or revision, you will need to **enter the identifier of the original submission** in the last field of the submission form.
+
+# After submitting your article
+
+Once you have submitted an article, the editorial board will go through the following steps.
 
 1. Decide if your submission is technically in the correct format. In particular:
     - are all the requested files there and of the correct format?
@@ -110,7 +100,6 @@ Once you have submitted a paper, the editorial board will go through the followi
     - **Major revisions** The manuscript and/or the code need major updates before the manuscript can be reconsidered. You are expected to fix the issues within three months, and resubmit along with a letter where you describe, point-by-point how the comments of the reviewers have been addressed. The paper will be send back to the reviewers for a second round of review, which may result in any verdict.
     - **Reject** Your paper is found to be unsuited for publication in the R Journal. No resubmission is allowed.
 
-Re-submission and revisions to accepted articles are received through the same site where new submissions are received (link above). When providing a re-submission or revision, you will need to **enter the identifier of the original submission** in the last field of the submission form.
 
 ### Note on special issue articles
 
