Added abstract constraint

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -31,6 +31,8 @@ Creative uses of interactive content in HTML formatted articles is encouraged. T
 
 Figures and tables should have alt-text in chunk specifications, to assist with accessibility.
 
+Titles and abstract should be in plain text, with the abstract no more than 250 words.
+
 ### Rmarkdown using rticles
 
 The `rticles::rjournal_article` output format has been deprecated in favour of `rjtools`. Please use `rjtools` instead of `rticles`.
