--- a/articles/RJ-2024-013/paper.tex
+++ b/articles/RJ-2024-013/paper.tex
@@ -4,9 +4,9 @@
 
 \maketitle
 
-\begin{abstract}%
+\abstract{%
 Re-running an experiment is generally costly and, in some cases, impossible due to limited resources; therefore, the design of an experiment plays a critical role in increasing the quality of experimental data. In this paper, we describe the current state of R-packages for the design of experiments through an exploratory data analysis of package downloads, package metadata, and a comparison of characteristics with other topics. We observed that experimental designs in practice appear to be sufficiently manufactured by a small number of packages, and the development of experimental designs often occurs in silos. We also discuss the interface designs of widely utilized R packages in the field of experimental design and discuss their future prospects for advancing the field in practice.
-\end{abstract}
+}
 
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
